--- a/06_inputs/index.html
+++ b/06_inputs/index.html
@@ -29,16 +29,16 @@
 
 <img src="./MorseCodeMachine.jpg" alt="MorseCodeMachine" class="tool-box-pic">
 
-A morse code encoder that relies on the distance between two sensors to determine dots and dashes and slashes and stuff. so far this is what I have: <br>
+<br> A morse code encoder that relies on the distance between two sensors to determine dots and dashes and slashes and stuff. so far this is what I have: <br>
 
 <img src="./FirstCapSetUp.jpeg" alt="Capacitor Set Up" class="tool-box-pic">
 
-I used the Tx-Rx capacitor sensing from the intro to capacitance slide on the ps70 website: 
+<br> I used the tx-rx capacitor sensing schematic from the intro to capacitance slide on the PS70 website: <br>
 
 <img src="./txrx_schematic.jpg" alt="txrx_schematic" class="tool-box-pic">
 
-Awesome. The next step is to figure out how to collect data for calibration of the sensor!
-and turn this: 
+<br> Awesome. The next step is to figure out how to collect data for calibration of the sensor!
+and turn this: <br>
 <img src="./UnCalGraph.jpg" alt="Uncalibrated Graph" class="tool-box-pic">
 
 into something useful. <br>
