did some standardizing of the website... maybe i'll add more background pictures soon

--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -4,34 +4,45 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PS70: Intro to Digital Fabrication</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="../style.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet"> <!-- Link to Rubik Mono One -->
 </head>
+<body>
 
-
-<nav class="navbar navbar-expand-sm navbar-dark" style=" color: #EEE7E8;">
-  <div style="align-items: center; justify-content: center;" class="container-fluid">
-    <div class="flexrow">
-      <h2 class="nav-title week-1-title">Week 1: Final Project Proposal</h2>
+  <nav class="navbar navbar-expand-sm navbar-dark" style=" color: #EEE7E8;">
+    <div class="navbar-nav home-button">
+      <h4>
+        <a class="nav-link home-btn" href="../index.html">
+          Home
+                <span class="ray-1"></span> <!-- Additional ray -->
+                <span class="ray-2"></span> <!-- Additional ray -->
+        </a>
+      </h4>
     </div>
-    <div class="navbar-nav">
-      <h4><a class="nav-link" href="../index.html">Home</a></h4>
-      <h4><a class="nav-link" href="../about.html">About</a></h4>
-    </div>
+      <!-- Other buttons, aligned to the right -->
+        <div class="navbar-nav other-buttons">
+            <h4><a class="nav-link" href="../about.html">About</a></h4>
+            <h4><a class="nav-link" href="../13_finalproject/index.html">Final Project</a></h4>
+        </div>
+    </nav>
+    <div class="title-row">
+      <h2 class="nav-title">
+       <br>Week 1: Final Project Proposal.
+      </h2>
   </div>
 </nav>
 
 <body>
 <xmp style="display:none;">
 <div class="textcontainer">
+<br></br>
 
 <p class = "margin"></p>
-<p class="project-intro">Here are at most 3 ideas for my final project</p>
+<h3 class="project-intro">Here are at most 3 ideas for my final project:</h3>
 <p class = "margin"></p>
 
-<h4>First Idea: Water bottle cleaner and status checker!</h4>
+<h4><b>First Idea:</b> Water bottle cleaner and status checker!</h4>
 <p class = "margin"></p>
 
 I'm really good at drinking water when my water bottle is clean. However, 
@@ -40,14 +51,14 @@ after a certain point I start to get suspicious that there's bacteria inside and
 <p class = "margin"></p>
 
 
-<h4>Second Idea: Friendly message keychain!</h4>
+<h4><b>Second Idea:</b> Friendly message keychain!</h4>
 <p class = "margin"></p>
 
 I'm a great friend but not so great at replying to texts! and i'm lucky to have friends that are equally horrible at texting. My idea is to make a keychain that my friends and i can carry around that can display our thoughtful one sentence messages, that you can enter using an app. (ex. miss you guys <3; have a great day :); look at the moon!) ideally, you would be able to send and reply to messages with preset buttons on the keychain. I would love to explore with the shape of the keychain... currently thinking of crocheting a small stuffed animal. 
 
 <p class = "margin"></p>
 
-<h4>Third Idea: Handwritten Letter Machine </h4>
+<h4><b>Third Idea:</b> Handwritten Letter Machine </h4>
 <p class = "margin"></p>
 
 Nothing beats the feeling of receiving a handwritten letter in the mail or just in general! But some of us (me) have horrible handwriting and therefore take forever to write things that other people are meant to read. On top of that, who has the time?? My idea is a robot that can hold a pen and then write notes for you in real time as you write your message out using voice typing. My hope is to make the handwriting look as authentic as possible by using AI. (as opposed to premade 'handwriting' fonts that don't mimic the variability of real handwriting). This could also be used as a tool to aid people with cognitive or physical disabilities for note taking during class. 
@@ -57,7 +68,7 @@ Nothing beats the feeling of receiving a handwritten letter in the mail or just 
 
 <p class = "margin"></p>
 
-<h4>Bonus Idea: Smart Fashion mirror </h4>
+<h4><b>Bonus Idea:</b> Smart Fashion mirror </h4>
 <p class = "margin"></p>
 
 Something that takes me forever is getting dressed before going out of the house! My idea is based off of the new(ish) fitness invention called MIRROR (image below). I would take this idea and apply it to my passion for fashion by making the mirror able to take a picture/screenshot of your current outfit and move it to a folder of past outfits. This serves as a way to document your outfits AND display them infront of you life-sized.  
