--- a/about.html
+++ b/about.html
@@ -1,21 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="./style.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet"> <!-- Link to Rubik Mono One -->
+</head>
+<body>
 
-<title>PS70: Intro to Digital Fabrication </title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
-<link href="./style.css" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
-
-
-
-<nav class="navbar navbar-expand-sm navbar-dark" style=" color: #EEE7E8;">
-  <div style="align-items: center; justify-content: center;" class="container-fluid">
-    <div class="flexrow">
+  <nav class="navbar navbar-expand-sm navbar-dark" style=" color: #EEE7E8;">
+    <div class="navbar-nav home-button">
+      <h4>
+        <a class="nav-link home-btn" href="./index.html">
+          Home
+                <span class="ray-1"></span> <!-- Additional ray -->
+                <span class="ray-2"></span> <!-- Additional ray -->
+        </a>
+      </h4>
     </div>
-    <div class="navbar-nav">
-      <h4><a class="nav-link" href="./index.html">Home</a></h4>
-      <h4><a class="nav-link" href="./about.html">About</a></h4>
-    </div>
+      <!-- Other buttons, aligned to the right -->
+        <div class="navbar-nav other-buttons">
+            <h4><a class="nav-link" href="./about.html">About</a></h4>
+            <h4><a class="nav-link" href="./13_finalproject/index.html">Final Project</a></h4>
+        </div>
+    </nav>
+    <div class="title-row">
+      <h2 class="nav-title">
+       <br>About Me!
+      </h2>
   </div>
 </nav>
 
@@ -23,9 +36,6 @@
 <xmp style="display:none;">
 <div class="textcontainer">
 
-
-
-<h3 style="text-align: center;">About Me!</h3>
 
 
 <p class="margin">   </p>
