working on week 10

--- a/07_outputs/index.html
+++ b/07_outputs/index.html
@@ -42,6 +42,10 @@
 
 <h3>Assignment: Minimum Viable Product for Final Project</h3>
 
+Okay so apparently everyone wants to know about my final project and here's what I have so far: 
+
+
+
 
 </div>
 </xmp>
