--- a/10_machine/index.html
+++ b/10_machine/index.html
@@ -1,31 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../style.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet"> <!-- Link to Rubik Mono One -->
+</head>
+<body>
 
-<title>PS70: Intro to Digital Fabrication </title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
-<link href="../style.css" rel="stylesheet">
-
-
-<nav class="navbar navbar-expand-sm navbar-dark" style=" color: #EEE7E8;">
-  <div style="align-items: center; justify-content: center;" class="container-fluid">
-    <div class="flexrow">
-      <h2 class="nav-title">PS70 Fall 2024</h2>
+  <nav class="navbar navbar-expand-sm navbar-dark" style=" color: #EEE7E8;">
+    <div class="navbar-nav home-button">
+      <h4>
+        <a class="nav-link home-btn" href="../index.html">
+          Home
+                <span class="ray-1"></span> <!-- Additional ray -->
+                <span class="ray-2"></span> <!-- Additional ray -->
+        </a>
+      </h4>
     </div>
-    <div class="navbar-nav">
-      <h4><a class="nav-link" href="../index.html">Home</a></h4>
-      <h4><a class="nav-link" href="../about.html">About</a></h4>
-    </div>
+      <!-- Other buttons, aligned to the right -->
+        <div class="navbar-nav other-buttons">
+            <h4><a class="nav-link" href="../about.html">About</a></h4>
+            <h4><a class="nav-link" href="../13_finalproject/index.html">Final Project</a></h4>
+        </div>
+    </nav>
+    <div class="title-row">
+      <h2 class="nav-title">
+       <br>Weeks 10-12: Machine Building
+      </h2>
   </div>
 </nav>
-
 <body>
 <xmp style="display:none;">
 <div class="textcontainer">
 <p class="margin">   </p>
 
-<h3>Weeks 10-12: Machine Building</h3>
+<h3>Assignment: Build a Drain Robot</h3>
 
-<h4>Assignment: Build a Drawing Robot</h4>
+<h4> Alrighty so for this week, we're making a robot that can navigate the Hallowed Drains of Harvard Halls. I've been sorted into the 'controller' group, which is in charge of making the consol that will ultimately be in control of the motors for the two drain robots' designs, as well as incorporating hardware to house the joystick and camera feed screen. I'm going to split this documentation up by robot design. We've got two teams: 1. snake head and 2. locomotion. Let's start with our control for team snake head: 
+
+<h3> 1. snake head </h3>
+
+<h4>This team needs controls for left and right movement using a servo and a joystick. For right now, I'm just going to add pictures and videos of this process and add captions afterwards. 
+
+  <img src="./StillServoAndJoy.jpeg" alt="Joystick and servo motor" class="tool-box-pic">
+
+<video class="centered-video" width="600" controls>
+  <source src="./ServoAndJoystick.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
+
+<h3> 2. locomotion <h3>
+
+<h4> Alrighty so we've just been informed that we are going with locomation which is driving their cart using. we're going to have to adapt!
+
+
+
 
 
 </div>
