--- a/02_2Ddesign/index.html
+++ b/02_2Ddesign/index.html
@@ -65,7 +65,7 @@ Here is what I made by following the tutorial:
 <h4>Assignment 3: Fusion Modeling</h4>
 
 I've made a screw:
-<img src="./ScrewPicture.jpeg" alt="screw loose" class="screw-pic">
+<img src="./ScrewPicture.jpg" alt="screw loose" class="screw-pic">
 
 
 
