--- a/04_microcontroller/index.html
+++ b/04_microcontroller/index.html
@@ -39,7 +39,9 @@
 <p class="margin">   </p>
 
 
-<h4>[Do Something with an arduino]</h4>
+<h3>Please see weeks 3 or 5 for me to see my code for the arduino! :)</h3>
+
+
 
 
 
