--- a/05_3Ddesign/index.html
+++ b/05_3Ddesign/index.html
@@ -39,7 +39,82 @@
 <p class="margin">   </p>
 
 
-<h4>Assignment: Model and 3D print something</h4>
+<h3>Assignment: Model and 3D print something</h3>
+
+<h4>
+  
+<p class="margin">   </p>
+
+Okay so I really wanted to make a crochet bowl in the shape of a cat! 
+
+here are my inspirations: 
+
+<p class="margin">   </p>
+
+<iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528989784171" height="700" width="450" frameborder="0" scrolling="no" ></iframe>
+
+<iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528989784200" height="550" width="450" frameborder="0" scrolling="no" ></iframe>
+
+<iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528989784166" height="413" width="450" frameborder="0" scrolling="no" ></iframe>
+
+<p class="margin">   </p>
+
+Okay so in order to make a bowl shape, I started with this shape: 
+
+<p class="margin">   </p>
+
+<iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528991341650" height="700" width="450" frameborder="0" scrolling="no" ></iframe>
+
+<p class="margin">   </p>
+
+And then rotated it around the center: 
+
+<p class="margin">   </p>
+
+<iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528991341661" height="700" width="450" frameborder="0" scrolling="no" ></iframe>
+
+<iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528991341703" height="700" width="450" frameborder="0" scrolling="no" ></iframe>
+
+<p class="margin">   </p>
+Beautiful! 
+
+<p class="margin">   </p>
+
+I added holes on this side for me to be able to stick my crochet hooks in them. 
+
+<p class="margin">   </p>
+
+<iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528991341706" height="700" width="450" frameborder="0" scrolling="no" ></iframe>
+
+<p class="margin">   </p>
+
+I also added whisker shaped slots in the front so I would have a place to store my bobby pins
+
+<p class="margin">   </p>
+
+<iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528991341713" height="700" width="450" frameborder="0" scrolling="no" ></iframe>
+
+<p class="margin">   </p>
+
+Here is the first iteration of my bowl: 
+
+<p class="margin">   </p>
+
+<iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528991341711" height="700" width="450" frameborder="0" scrolling="no" ></iframe>
+
+<p class="margin">   </p>
+
+I forgot to put supports on it and it had no ears!
+
+So I used it for holding screws in later weeks: 
+
+<p class="margin">   </p>
+
+<iframe src="https://assets.pinterest.com/ext/embed.html?id=707698528991341788" height="700" width="450" frameborder="0" scrolling="no" ></iframe>
+
+<p class="margin">   </p>
+
+
 
 
 </div>
